# bioinformatics-toolbox

./: pyproject.toml  sandbox.ipynb
.ipynb_checkpoints/: sandbox-checkpoint.ipynb
.virtual_documents/: Untitled.ipynb  sandbox.ipynb
Rosalind Solutions/: consensus_and_profile.py  expected_offspring.py  finding_a_shared_motif.py  mortal_fibonacci_rabbits.py  overlap_graphs.py
data/: codon_mapping.json  example_FASTA_data.txt  rosalind_cons.txt  rosalind_grph.txt  rosalind_lcsm.txt
scripts/: utils.py
