[tool.poetry]
name = "bioinformatics-toolbox"
version = "0.1.0"
description = ""
authors = ["Dylan Mack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
